use ChatColor instead of relying on raw color codes, a bit messier but it's a bit more readable in my opinion